@@ -30,5 +30,8 @@
       <option value="selectlist 3">Option 3</option>
     </select>
 
+    <a href="blah.html" class="link">link 1</a>
+    <a href="blah.html" class="link">link 2</a>
+    <a href="blah.html" class="link">link 3</a>
   </body>
 </html>
