@@ -67,3 +67,16 @@ end
 Then /^the value of select list (\d+) should be "([^\"]*)"$/ do |select_list_num, value|
   @elements[select_list_num.to_i - 1].value.should == value
 end
+
+When /^I select the link with class "([^\"]*)"$/ do |link_class|
+  @elements = @page.link_elements(:class => link_class)
+end
+
+Then /^I should have (\d+) links$/ do |num_links|
+  @elements.size.should == num_links.to_i
+end
+
+Then /^the text of link (\d+) should be "([^\"]*)"$/ do |link_num, text|
+  @elements[link_num.to_i - 1].text.should == text
+end
+
