@@ -76,6 +76,12 @@ describe PageObject::ElementLocators do
       element = watir_page_object.link_element(:id => 'blah')
       element.should be_instance_of PageObject::Elements::Link
     end
+
+    it "should find all link elements" do
+      watir_browser.should_receive(:links).with(:id => 'blah').and_return([watir_browser])
+      elements = watir_page_object.link_elements(:id => 'blah')
+      elements[0].should be_instance_of PageObject::Elements::Link 
+    end
     
     it "should find a check box" do
       watir_browser.should_receive(:checkbox).with(:id => 'blah').and_return(watir_browser)
@@ -261,6 +267,12 @@ describe PageObject::ElementLocators do
       selenium_browser.should_receive(:find_element).with(:id, 'blah').and_return(selenium_browser)
       element = selenium_page_object.link_element(:id => 'blah')
       element.should be_instance_of PageObject::Elements::Link
+    end
+
+    it "should find all link elements" do
+      selenium_browser.should_receive(:find_elements).with(:id, 'blah').and_return([selenium_browser])
+      elements = selenium_page_object.link_elements(:id => 'blah')
+      elements[0].should be_instance_of PageObject::Elements::Link 
     end
     
     it "should find a check box" do
