@@ -5,6 +5,7 @@
   * Added #hidden_field_elements to ElementLocators
   * Added #text_area_elements to ElementLocators
   * Added #select_list_elements to ElementLocators
+  * Added #link_elements to ElementLocators
   * Added #navigate_to to PageFactory to navigate to a page through previous pages
   * Added #continue_navigation_to to PageFactory which begins at @current_page
   * Added routes to PageFactory to collect routes through the site
